@@ -22,7 +22,7 @@ patches="
 	binutils-signed-5.patch
 	binutils-weakdef-2.patch
 	bfd-64k-2.patch
-	binutils-lto-mixed-2.patch
+	binutils-lto-mixed-3.patch
 "
 
 if [ -n "$clean" ]
