@@ -1,3 +1,9 @@
+2010-12-13  H.J. Lu  <hjl.tools@gmail.com>
+
+	* binutils-lto-mixed-3.patch: New file. Replace ...
+	* binutils-lto-mixed-2.patch: This. Removed.
+	* README: Likewise.
+
 2010-12-12  H.J. Lu  <hjl.tools@gmail.com>
 
 	* binutils-lto-mixed-2.patch: New file. Replace ...
